--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,11 @@
 sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
+numpy<2.0.0
+pandas>=1.2.0
+scikit-image>=0.18.0
+scikit-learn>=0.24.0
+joblib>=1.0.0
+cython>=3.0.11
+spectral>=0.23.0
+pysolar>=0.13
+h5netcdf>=1.1.0
